Fixed broken UI of events in helm app

--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
@@ -28,7 +28,7 @@
     }
 }
 
-.no-border {
+.event-no-border {
     border: none;
 }
 
